--- a/views/about.html
+++ b/views/about.html
@@ -78,7 +78,7 @@
                         <span> Jujutsu Kaisen, Naruto, Avatar The Last Airbender</span>
                         
                         <li class="font-semibold text-primary">Art</li>
-                        <span>When there are better regarding privacy and copyright, I will upload again</span>
+                        <span>When there are better laws regarding privacy and copyright, I will upload again</span>
                     </ul>
                     <br>
                     <br>
