--- a/views/sets.ejs
+++ b/views/sets.ejs
@@ -51,7 +51,7 @@
             </button>   -->
 
             <button class="btn btn-active:bg-violet-600 hover:bg-violet-600 hover:text-base-100 bg-primary">
-                <a href="/lego/sets?theme=Creator_Expert">Expert</a>
+                <a href="/lego/sets?theme=Creator%20Expert">Expert</a>
             </button>  
         </div>
 
