--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,33 +8,10 @@
     <title>Lego_collection</title>
     <link rel="stylesheet" href="/css/main.css" />
     <!-- <link rel="stylesheet" href="../css/main.css" />  -->
-
+    
 </head>
 <body>
-
-      <div class="navbar bg-base-100">
-        <div class="flex-1">
-          <a class="text-lg btn hover:bg-violet-600 hover:text-base-100" href="/">Lego Collection</a>
-          <a class="btn hover:bg-violet-600 hover:text-base-100" href="/about">About</a> 
-        </div>
-      
-        <div class="navbar-center flex">
-          <ul class="menu">
-            <li>
-              <details>
-                <!-- drop down of three -->
-                <summary>Summary Themes</summary>
-                <ul class="p-2 bg-base-100 right-0 ">
-                  <li><a href="/lego/sets?theme=Modular_Buildings">Modular Buildings</a></li>
-                  <li><a href="/lego/sets?theme=Ultimate_Collector_Series">Ultimate Collector Series</a></li>
-                  <li><a href="/lego/sets?theme=town">Town</a></li>
-                </ul>
-              </details>
-            </li>
-          </ul>
-        </div>
-      </div>
-
+  <%- include('partials/navbar', {page: '/home'}) %>
       <!-- hero component -->
     <div class="container mx-auto">
         <span class="hero">Explore the entire collection</span> 
